Appwrap issues

--- a/src/container/Skills/skills.scss
+++ b/src/container/Skills/skills.scss
@@ -14,6 +14,7 @@
 .app__skills-container {
   width: 80%;
   margin-top: 3rem;
+  margin: auto;
 
   display: flex;
   flex-direction: row;
